# cougars-ros2

./: .gitignore  README.md
.github/: lint_local.sh  super_linter.env
.github/workflows/: colcon_build_test.yml  main-only-from-dev.yml
coug_mapviz/: CMakeLists.txt  mapviz_plugins.xml  package.xml
coug_mapviz/include/coug_mapviz/: coug_waypoint_manager.hpp  coug_waypoints_plugin.hpp
coug_mapviz/launch/: mapviz_launch.py  nelson_coug_mapviz.launch.py
coug_mapviz/mapviz/: BlueROV.mvc  mapviz_config.mvc.template  mapviz_origins.yaml  multi_mapviz_config.mvc.template
coug_mapviz/src/: coug_waypoint_manager.cpp  coug_waypoints_plugin.cpp
coug_mapviz/ui/: coug_waypoints_config.ui
cougars_bridge/: CMakeLists.txt  package.xml
cougars_bridge/launch/: cougars_bridge.launch.py  cougars_bridge_launch.py
cougars_bridge/launch-old/: sensors_launch.py
cougars_bridge/scripts/: gps_odom.py
cougars_bridge/src/: seatrac_imu_converter.cpp
cougars_bringup/: CMakeLists.txt  package.xml
cougars_bringup/launch/: bringup_launch.py  modes.py  persistant_launch.py  recorder_diagnostics_launch.py  sensors_launch.py
cougars_bringup/scripts/: mission_publisher.py  origin_publisher.py  param_reloader.py  startup_call.py
cougars_bringup/src/: bag_recorder.cpp
cougars_coms/: setup.py
cougars_coms/include/cougars_coms/: coms_protocol.hpp
cougars_coms/launch/: coms_launch.py  pinger_launch.py  radio_launch.py
cougars_coms/rf_bridge/: rf_bridge.py
cougars_coms/src/: cougars_coms.cpp  vehicle_pinger.cpp
cougars_control/: CMakeLists.txt  package.xml
cougars_control/launch/: bluerov_launch.py  control_launch.py  demo_launch.py  factor_bag_launch.py  manual_launch.py  moos_launch.py  waypoint_launch.py
cougars_control/scripts/: dummy_factor_starter.py  fins_manual.py  manual_mission.py
cougars_control/src/: actuator.cpp  coug_controls.cpp  coug_kinematics.cpp  emergency_protocols.cpp  mc_serial_node.cpp  pid.cpp  pid_int2.cpp  static_planner.cpp  waypoint_follower.cpp  waypoint_follower_gps.cpp  waypoint_manager.cpp
cougars_control/waypoint_missions/: cb_large_test_mission.yaml  mission_plan_mission.yaml  provo_marina_mission.yaml
cougars_converters/: CMakeLists.txt
cougars_converters/src/: seatrac_imu_converter.cpp
cougars_description/: setup.py
cougars_interfaces/: CMakeLists.txt  package.xml
cougars_interfaces/msg/: ActuatorCommand.msg  ControlCommand.msg  ControlsDebug.msg  DesiredGoal.msg  FleetControl.msg  MissionFeedback.msg  SystemControl.msg  VehicleSetpoint.msg  WayPoint.msg  WaypointFeedback.msg  WaypointGoal.msg
cougars_localization/: CMakeLists.txt  package.xml
cougars_localization/launch/: converters_launch.py  cougars_localization_launch.py  factor_converters_launch.py  factor_launch.py  sensors_launch.py
cougars_localization/scripts/: dvl_manager.py  factor_class_plot.py  factor_graph.py  factor_plot.py  gps_odom.py  mavlink_bridge.py  nmea_constructor.py
cougars_localization/src/: depth_convertor.cpp  dvl_convertor.cpp  dvl_global.cpp  seatrac_ahrs_convertor.cpp  static_tf_publisher.cpp
cougars_nav/: CMakeLists.txt  package.xml
cougars_nav/launch/: manual_launch.py
cougars_nav/launch_old/: waypoint_launch.py
cougars_nav/scripts/: manual_mission.py  setpoint_transformer.py
cougars_nav/src/: mission_manager.cpp  waypoint_controller.cpp  waypoint_iterator.cpp  waypoint_manager.cpp
pressure_sensor/: setup.py
pressure_sensor/pressure_sensor/: pressure_pub.py
src/seatrac/src/: modem_ros_node.cpp
